Added Home Page update.

--- a/columbianissan/manager-specials.html
+++ b/columbianissan/manager-specials.html
@@ -97,29 +97,7 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-home">
-			
-			<!-- #HOME-SECONDARY-NAV -->
-			<section id="home-secondary-nav" class="wrapper-content">
-				<nav>
-					<ul class="clearfix">
-						<li><a href="new-cars-trucks.html">Brand New Vehicles</a></li>
-						<li><a href="used-cars.html">Pre-Owned Vehicles</a></li>
-						<li><a href="vin-stock-search.html">Stock Number</a></li>
-						<li><a href="buy-my-used-car.html">Vehicle Page</a></li>
-						<li><a href="manager-specials.html">Manager's Specials</a></li>
-						<li><a href="commercial-vehicles.html">Commercial Vehicle</a></li>
-					</ul>
-				</nav>
-			</section> <!-- /#HOME-SECONDARY-NAV-->
-
-			<!-- #HOME-PROMOTIONS -->
-			<section id="home-promotions">
-				<a href="http://www.choosenissan.com/south/dealer-incentives.html" target="_blank">
-					<img src="assets/img/banners/zeroinonnissan.jpg" alt="Zero in on Big Savings Nissan"/>
-				</a>
-			</section> <!-- /#HOME-PROMOTIONS -->
-		</article> <!-- /#CONTENT-PRIMARY-HOME -->
+		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
@@ -129,11 +107,11 @@
 				<div id="footer-nav-links">
 					<nav>
 						<ul>
-							<li><a href="sitemap.html">Sitemap</a></li>
+							<li><a href="#">Sitemap</a></li>
 							<li><a href="#">All Inventory</a></li>
-							<li><a href="http://www.dicksmith.com/privacystatement.cfm">Privacy Policy</a></li>
-							<li><a href="contact-us.html">Contact Us</a></li>
-							<li><a href="http://www.dicksmith.com/careers">Jobs</a></li>
+							<li><a href="#">Privacy Policy</a></li>
+							<li><a href="#">Contact Us</a></li>
+							<li><a href="#">Jobs</a></li>
 						</ul>
 					</nav>
 				</div> <!-- /#FOOTER-NAV-LINKS -->
