car-truck-parts
html/css updates

--- a/columbianissan/car-truck-parts.html
+++ b/columbianissan/car-truck-parts.html
@@ -99,15 +99,15 @@
 		<!-- #CONTENT-PRIMARY -->
 		<article id="content-primary-ctp" class="content-primary">
 			
-			<div class="container-wrapper">
-				<div class="container-fluid">
+			<div class="container">
+				<div class="container-wrapper">
 					<div class="row">
 						<div class="col-xs-12">
 							<h1 class="text-center">Dick Smith Nissan of Columbia Parts Department</h1>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-8">
+						<div class="col-md-8">
 							<div class="minheight-ctp">
 								<div class="row">
 									<div class="col-md-6">
@@ -124,7 +124,7 @@
 							</div>
 						</div>
 
-						<div class="col-sm-4">
+						<div class="col-md-4">
 							<div class="minheight-ctp">
 								<h3>Parts Department</h3>
 
