email parts department
added contents
update css

--- a/columbianissan/email-parts-department.html
+++ b/columbianissan/email-parts-department.html
@@ -97,7 +97,85 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-epd" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="header">
+						<h1>Send an Email to the Nissan Parts</h1>
+						<h3>Fill out the form below, please.</h3>
+					</div>
+
+					<div class="epd-form">
+						<form>
+							<div class="block">
+								<h3>Personal Information</h3>
+								<div class="box">
+									<label>first name <span>*</span></label>
+									<input type="" name="" placeholder="john" />
+								</div>
+								<div class="box">
+									<label>last name <span>*</span></label>
+									<input type="" name="" placeholder="doe" />
+								</div>
+
+								<h3>Contact Information</h3>
+								<div class="box">
+									<label>email <span>*</span></label>
+									<input type="" name="" placeholder="johndoe@email.com" pattern="[a-zA-Z0-9 @.]+" />
+								</div>
+								<div class="box">
+									<label>phone</label>
+									<input type="" name="" placeholder="(___) ___-_____" pattern="[0-9,()-]" />
+								</div>
+							</div>
+
+							<div class="block">
+								<h3>Vehicle Information</h3>
+								<div class="box">
+									<label>make</label>
+									<input type="" name="" placeholder="box" />
+								</div>
+								<div class="box">
+									<label>model</label>
+									<input type="" name="" placeholder="model" />
+								</div>
+								<div class="box">
+									<label>year</label>
+									<input type="" name="" placeholder="year" />
+								</div>
+
+								<h3>Part Information</h3>
+								<div class="box">
+									<label>vin</label>
+									<input type="" name="" placeholder="VIN" />
+								</div>
+								<div class="box">
+									<label>part number</label>
+									<input type="" name="" placeholder="partnum" />
+								</div>
+							</div>
+
+							<div class="block">
+								<h3>Additional Comments</h3>
+								<div class="box">
+									<textarea placeholder="Add Comment(s) Here"></textarea>
+								</div>
+							</div>
+
+							<div class="block">
+								<div class="captcha-holder">
+									<img src="assets/img/captcha.png" alt="" />
+								</div>
+								<div class="action">
+									<input type="submit" name="" value="submit" >
+									<small>or press enter</small>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
