--- a/columbianissan/email-parts-department.html
+++ b/columbianissan/email-parts-department.html
@@ -100,12 +100,12 @@
 		<article id="content-primary-epd" class="content-primary">
 			<div class="container">
 				<div class="container-wrapper">
-					<div class="header">
+					<div class="header form-header">
 						<h1>Send an Email to the Nissan Parts</h1>
 						<h3>Fill out the form below, please.</h3>
 					</div>
 
-					<div class="epd-form">
+					<div class="epd-form form">
 						<form>
 							<div class="block">
 								<h3>Personal Information</h3>
@@ -167,7 +167,7 @@
 									<img src="assets/img/captcha.png" alt="" />
 								</div>
 								<div class="action">
-									<input type="submit" name="" value="submit" >
+									<input type="submit" name="" value="submit" class="btn-submit" />
 									<small>or press enter</small>
 								</div>
 							</div>
