car servce and email service dept
added contents
updates css

--- a/columbianissan/car-service.html
+++ b/columbianissan/car-service.html
@@ -97,7 +97,96 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-ctp" class="content-primary">
+			
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="row">
+						<div class="col-xs-12">
+							<h1 class="text-center">Dick Smith Nissan of Columbia Service Department</h1>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-8">
+							<div class="minheight-ctp">
+								<div class="row">
+									<div class="col-md-6">
+										<h3>WE CARE ABOUT YOUR EXPERIENCE</h3>
+										<p>At Dick Smith, we understand that your vehicle's maintenance is important to you, so for over forty years we have strived to be the very best in automotive service and repair. We are proud of our state-of-the-art facility, which features the most current diagnostic and repair equipment available. Our highly trained, factory technicians share in the Dick Smith Nissan sentiment that you and your vehicle deserve only the best of care.</p>
+									</div>
+									<div class="col-md-6 text-center"><img src="assets/img/department/service/servicedept.jpg" alt="" /></div>
+								</div>
+							</div>
+							<div class="logo-wrappers logo-wrappers-l">
+								<div class="svc-pd-logo"><img src="assets/img/department/service/ase.png" alt="" /></div>
+								<div class="svc-pd-logo"><img src="assets/img/department/service/NAPA.png" alt="" /></div>
+								<div class="svc-pd-logo"><img src="assets/img/department/service/keydrop.png" alt="" /></div>
+								<div class="svc-pd-logo"><img src="assets/img/department/service/freewi-fi-logo.png" alt="" /></div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="minheight-ctp">
+								<h3>Service Department</h3>
+
+								<h4>Hours of Operation</h4>
+								<div class="box-hoo">
+									<div class="row">
+										<div class="col-xs-5">Monday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Tuesday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Wednesday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Thursday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Friday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Saturday</div>
+										<div class="col-xs-7">7:00am to 5:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Sunday</div>
+										<div class="col-xs-7">CLOSED</div>
+									</div>
+								</div>
+
+								<h4>Direct Phone Contact</h4>
+								<div class="box-hoo">
+									<div class="row">
+										<div class="col-xs-5">Direct Dial</div>
+										<div class="col-xs-7">(803) 799-6327</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Toll Free</div>
+										<div class="col-xs-7">(800) 944-8570</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Fax</div>
+										<div class="col-xs-7">(803) 771-7863</div>
+									</div>
+								</div>
+							</div>
+							<div class="logo-wrappers logo-wrappers-r text-center">
+								<div class="svc-pd-logo"><a href="#"><img src="assets/img/department/service/appt.png" alt="" /></a></div>
+								<div class="svc-pd-logo"><a href="#"><img src="assets/img/department/service/requestinfo.png" alt="" /></a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
