--- a/columbianissan/car-truck-parts.html
+++ b/columbianissan/car-truck-parts.html
@@ -117,7 +117,7 @@
 									<div class="col-md-6 text-center"><img src="assets/img/department/parts/parts.jpeg" alt="" /></div>
 								</div>
 							</div>
-							<div class="logo-wrappers">
+							<div class="logo-wrappers logo-wrappers-l">
 								<div class="svc-pd-logo"><img src="assets/img/department/parts/BAWP.png" alt="" /></div>
 								<div class="svc-pd-logo"><img src="assets/img/department/parts/NAPAparts.png" alt="" /></div>
 								<div class="svc-pd-logo"><img src="assets/img/department/parts/mopar.png" alt="" /></div>
@@ -176,7 +176,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="logo-wrappers text-center">
+							<div class="logo-wrappers logo-wrappers-r text-center">
 								<div class="svc-pd-logo"><a href="#"><img src="assets/img/department/parts/requestinfo.png" alt="" /></a></div>
 							</div>
 						</div>
