--- a/columbianissan/buy-my-used-car.html
+++ b/columbianissan/buy-my-used-car.html
@@ -97,7 +97,153 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-bmuc" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="header form-header">
+						<h1>We'll Buy Your Car For Cash or Trade</h1>
+						<h3>Fill out the form below,<br />
+then bring in your vehicle for an appraisal.</h3>
+					</div>
+
+					<div class="epd-form form">
+						<form>
+							<div class="block">
+								<p class="text-orange">Please fill out required fields marked with a red star.</p>
+								<h3>Personal Information</h3>
+								<div class="box">
+									<label>first name <span>*</span></label>
+									<input type="" name="" placeholder="john" />
+								</div>
+								<div class="box">
+									<label>middle name <span>*</span></label>
+									<input type="" name="" placeholder="james" />
+								</div>
+								<div class="box">
+									<label>last name <span>*</span></label>
+									<input type="" name="" placeholder="doe" />
+								</div>
+
+								<h3>Contact Information</h3>
+								<div class="box">
+									<label>email <span>*</span></label>
+									<input type="" name="" placeholder="johndoe@email.com" pattern="[a-zA-Z0-9 @.]+" />
+								</div>
+								<div class="box">
+									<label>phone</label>
+									<input type="" name="" placeholder="(___) ___-_____" pattern="[0-9,()-]" />
+								</div>
+							</div>
+
+							<div class="block">
+								<h3>Describe The Vehicle You Want To Trade Or Sell</h3>
+								<div class="row">
+									<div class="col-md-4">
+										<div class="box">
+											<label>year</label>
+											<input type="" name="" placeholder="year" />
+										</div>
+										<div class="box">
+											<label>make</label>
+											<input type="" name="" placeholder="make" />
+										</div>
+										<div class="box">
+											<label>trim</label>
+											<input type="" name="" placeholder="trim" />
+										</div>
+										<div class="box">
+											<label>balanced owed</label>
+											<input type="" name="" placeholder="balanced owed" />
+										</div>
+									</div>
+									<div class="col-md-4">
+										<div class="box">
+											<label>mileage</label>
+											<input type="" name="" placeholder="mileage" />
+										</div>
+										<div class="box">
+											<label>model</label>
+											<input type="" name="" placeholder="model" />
+										</div>
+										<div class="box">
+											<label>transmission</label>
+											<select>
+							                    <option value="automatic">automatic</option>
+							                    <option value="manual">manual</option>
+											</select>
+										</div>
+										<div class="box">
+											<label>loan type</label>
+											<select>
+							                    <option value="financed">financed</option>
+							                    <option value="leased">leased</option>
+							                    <option value="No Loan">no loan</option>
+											</select>
+										</div>
+									</div>
+								</div>
+								<div class="box">
+									<label>describe vehicle's condition</label>
+									<textarea>Descibe Your Vehicle's Condition</textarea>
+								</div>
+							</div>
+
+							<div class="block">
+								<h3>Schedule An Appointment</h3>
+								<div class="box">
+									<label>select the date you want to bring your vehicle to Dick Smith Nissan.<span>*</span></label>
+									<input type="" name="" value="Click here to select date." />
+								</div>
+								<div class="box">
+									<label>preferred time<span>*</span></label>
+									<select>
+										<option value="9:00 am">9:00 am</option>
+										<option value="9:30 am">9:30 am</option>
+										<option value="10:00 am">10:00 am</option>
+										<option value="10:30 am">10:30 am</option>
+										<option value="11:00 am">11:00 am</option>
+										<option value="11:30 am">11:30 am</option>
+										<option value="12:00 pm">12:00 pm</option>
+										<option value="12:30 pm">12:30 pm</option>
+										<option value="1:00 pm">1:00 pm</option>
+										<option value="1:30 pm">1:30 pm</option>
+										<option value="2:00 pm">2:00 pm</option>
+										<option value="2:30 pm">2:30 pm</option>
+										<option value="3:00 pm">3:00 pm</option>
+										<option value="3:30 pm">3:30 pm</option>
+										<option value="4:00 pm">4:00 pm</option>
+										<option value="4:30 pm">4:30 pm</option>
+										<option value="5:00 pm">5:00 pm</option>
+										<option value="5:30 pm">5:30 pm</option>
+										<option value="6:00 pm">6:00 pm</option>
+										<option value="6:30 pm">6:30 pm</option>
+										<option value="7:00 pm">7:00 pm</option>
+										<option value="7:30 pm">7:30 pm</option>
+									</select>
+								</div>
+							</div>
+
+							<div class="block">
+								<h3>Additional Comments</h3>
+								<div class="box">
+									<textarea placeholder="Add Comment(s) Here"></textarea>
+								</div>
+							</div>
+
+							<div class="block">
+								<div class="captcha-holder">
+									<img src="assets/img/captcha.png" alt="" />
+								</div>
+								<div class="action">
+									<input type="submit" name="" value="submit" class="btn-submit" />
+									<small>or press enter</small>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
