--- a/columbianissan/commercial-vehicles.html
+++ b/columbianissan/commercial-vehicles.html
@@ -97,7 +97,75 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-commerialvehicles" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="header form-header">&nbsp;</div>
+					<div class="cv-title">
+						<h1>New Nissan Commercial Vans and Trucks</h1>
+						<h3>Special Financing and Fleet Manager Specials Available</h3>
+					</div>
+					<div class="vehicle-wrapper">
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/commercial/nv1500.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>NV1500 CARGO</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/commercial/nv2500.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>NV2500 HD CARGO</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/commercial/nv3500.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>NV3500 HD CARGO</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/commercial/nvcompact.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>NV200 COMPACT CARGO</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/commercial/nvpass.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>NV PASSENGER</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/commercial/titan.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>TITAN</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/commercial/frontier.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>FRONTIER</h2>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
