--- a/columbianissan/inventory.html
+++ b/columbianissan/inventory.html
@@ -97,7 +97,13 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-inventory" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
