--- a/columbianissan/buy-my-used-car-application.html
+++ b/columbianissan/buy-my-used-car-application.html
@@ -37,7 +37,6 @@
 			<!-- FACEBOOK-PIXEL -->
 			<script type="text/javascript">
 				!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','//connect.facebook.net/en_US/fbevents.js');
-
 				fbq('init', '1505762003069706');
 				fbq('track', 'PageView');
 			</script>
@@ -97,21 +96,27 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-epd" class="content-primary">
+		<article id="content-primary-bmuca" class="content-primary">
 			<div class="container">
 				<div class="container-wrapper">
 					<div class="header form-header">
-						<h1>Send an Email to the Nissan Parts</h1>
-						<h3>Fill out the form below, please.</h3>
+						<h1>We'll Buy Your Car For Cash or Trade</h1>
+						<h3>Fill out the form below,<br />
+then bring in your vehicle for an appraisal.</h3>
 					</div>
 
 					<div class="epd-form form">
 						<form>
 							<div class="block">
+								<p class="text-orange">Please fill out required fields marked with a red star.</p>
 								<h3>Personal Information</h3>
 								<div class="box">
 									<label>first name <span>*</span></label>
 									<input type="" name="" placeholder="john" />
+								</div>
+								<div class="box">
+									<label>middle name <span>*</span></label>
+									<input type="" name="" placeholder="james" />
 								</div>
 								<div class="box">
 									<label>last name <span>*</span></label>
@@ -130,28 +135,90 @@
 							</div>
 
 							<div class="block">
-								<h3>Vehicle Information</h3>
-								<div class="box">
-									<label>make</label>
-									<input type="" name="" placeholder="box" />
+								<h3>Describe The Vehicle You Want To Trade Or Sell</h3>
+								<div class="row">
+									<div class="col-md-4">
+										<div class="box">
+											<label>year</label>
+											<input type="" name="" placeholder="year" />
+										</div>
+										<div class="box">
+											<label>make</label>
+											<input type="" name="" placeholder="make" />
+										</div>
+										<div class="box">
+											<label>trim</label>
+											<input type="" name="" placeholder="trim" />
+										</div>
+										<div class="box">
+											<label>balanced owed</label>
+											<input type="" name="" placeholder="balanced owed" />
+										</div>
+									</div>
+									<div class="col-md-4">
+										<div class="box">
+											<label>mileage</label>
+											<input type="" name="" placeholder="mileage" />
+										</div>
+										<div class="box">
+											<label>model</label>
+											<input type="" name="" placeholder="model" />
+										</div>
+										<div class="box">
+											<label>transmission</label>
+											<select>
+							                    <option value="automatic">automatic</option>
+							                    <option value="manual">manual</option>
+											</select>
+										</div>
+										<div class="box">
+											<label>loan type</label>
+											<select>
+							                    <option value="financed">financed</option>
+							                    <option value="leased">leased</option>
+							                    <option value="No Loan">no loan</option>
+											</select>
+										</div>
+									</div>
 								</div>
 								<div class="box">
-									<label>model</label>
-									<input type="" name="" placeholder="model" />
+									<label>describe vehicle's condition</label>
+									<textarea>Descibe Your Vehicle's Condition</textarea>
 								</div>
-								<div class="box">
-									<label>year</label>
-									<input type="" name="" placeholder="year" />
-								</div>
+							</div>
 
-								<h3>Part Information</h3>
+							<div class="block">
+								<h3>Schedule An Appointment</h3>
 								<div class="box">
-									<label>vin</label>
-									<input type="" name="" placeholder="VIN" />
+									<label>select the date you want to bring your vehicle to Dick Smith Nissan.<span>*</span></label>
+									<input type="" name="" value="Click here to select date." />
 								</div>
 								<div class="box">
-									<label>part number</label>
-									<input type="" name="" placeholder="partnum" />
+									<label>preferred time<span>*</span></label>
+									<select>
+										<option value="9:00 am">9:00 am</option>
+										<option value="9:30 am">9:30 am</option>
+										<option value="10:00 am">10:00 am</option>
+										<option value="10:30 am">10:30 am</option>
+										<option value="11:00 am">11:00 am</option>
+										<option value="11:30 am">11:30 am</option>
+										<option value="12:00 pm">12:00 pm</option>
+										<option value="12:30 pm">12:30 pm</option>
+										<option value="1:00 pm">1:00 pm</option>
+										<option value="1:30 pm">1:30 pm</option>
+										<option value="2:00 pm">2:00 pm</option>
+										<option value="2:30 pm">2:30 pm</option>
+										<option value="3:00 pm">3:00 pm</option>
+										<option value="3:30 pm">3:30 pm</option>
+										<option value="4:00 pm">4:00 pm</option>
+										<option value="4:30 pm">4:30 pm</option>
+										<option value="5:00 pm">5:00 pm</option>
+										<option value="5:30 pm">5:30 pm</option>
+										<option value="6:00 pm">6:00 pm</option>
+										<option value="6:30 pm">6:30 pm</option>
+										<option value="7:00 pm">7:00 pm</option>
+										<option value="7:30 pm">7:30 pm</option>
+									</select>
 								</div>
 							</div>
 
