--- a/columbianissan/buy-my-used-car.html
+++ b/columbianissan/buy-my-used-car.html
@@ -97,7 +97,52 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-bmuc" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="byuc-list">
+								<div class="box">
+									<h2>Trade your vehicle in for cash or a voucher towards another vehicle at any of our locations.</h2>
+								</div>
+								<div class="box">
+									<p class="list-num">1:</p>
+									<h3>Tell us about your vehicle and select the best time to come in for your appraisal.</h3>
+								</div>
+								<div class="box">
+									<p class="list-num">2:</p>
+									<h3>Bring your vehicle to your nearest Dick Smith location.</h3>
+								</div>
+								<div class="box">
+									<p class="list-num">3:</p>
+									<h3>We will give you a check for your vehicle or trade-in voucher good at any of the Dick Smith locations.</h3>
+								</div>
+								<div class="box">
+									<div class="get-started">
+										<a href="#">Click Here To Get Started</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						
+						<div class="col-md-6">
+							<div class="img-video">
+								<div class="iv-image box">
+									<img src="assets/img/videos/vep-banner.png">
+								</div>
+								<div class="iv-video box">
+									<div class="video-holder">
+										<img src="assets/img/videos/video-img.jpg">
+									</div>
+									<p>Download Video: <a href="#">MP4</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
