--- a/columbianissan/contact-us.html
+++ b/columbianissan/contact-us.html
@@ -97,7 +97,216 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-contactus" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<h1>Contact Dick Smith Nissan by Email Phone or Fax</h1>
+					<div class="row">
+						<div class="col-md-7">
+							<div class="form contactus-form">
+								<div class="header form-header">
+									<h2>CONTACT US BY EMAIL</h2>
+									<hr />
+									<h3>Fill out the info below!</h3>
+								</div>
+
+								<div class="cu-form-pad">
+									<div class="block">
+										<div class="box">
+											<div class="box-side">
+												<label>first name <span>*</span></label>
+												<input type="" name="" placeholder="John" />
+											</div>
+											<div class="box-side">
+												<label>last name <span>*</span></label>
+												<input type="" name="" placeholder="doe" />
+											</div>
+										</div>
+										<div class="box">
+											<label>email <span>*</span></label>
+											<input type="" name="" placeholder="johndoe@email.com" />
+										</div>
+										<div class="box">
+											<label>phone</label>
+											<input type="" name="" placeholder="(___) ___-_____" />
+										</div>
+										<div class="box">
+											<label>department</label>
+											<select>
+							                    <option value="ds-sls">Sales</option>
+							                    <option value="ds-srv">Service</option>
+							                    <option value="ds-prt">Parts</option>
+							                    <option value="bodyshop">BodyShop</option>
+							                    <option value="it">IT</option>
+											</select>
+										</div>
+									</div>
+
+									<div class="block">
+										<h3>comments</h3>
+										<div class="box">
+											<textarea></textarea>
+										</div>
+									</div>
+
+									<div class="block">
+										<div class="captcha-holder">
+											<img src="assets/img/captcha.png" alt="" />
+										</div>
+										<div class="action">
+											<input type="submit" name="" value="submit" class="btn-submit" />
+											<small>or press enter</small>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-md-offset-1">
+							<div class="box-hoo-cu">
+								<h3>Sales Department</h3>
+								<h4>Hours of Operation</h4>
+								<div class="row">
+									<div class="col-xs-5">Monday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Tuesday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Wednesday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Thursday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Friday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Saturday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Sunday</div>
+									<div class="col-xs-7">CLOSED</div>
+								</div>
+
+								<h4>Direct Phone Contact</h4>
+								<div class="row">
+									<div class="col-xs-5">Direct Dial</div>
+									<div class="col-xs-7">(803) 256-6600</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Toll Free</div>
+									<div class="col-xs-7">(800) 944-8570</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Fax</div>
+									<div class="col-xs-7">(803) 254-8551</div>
+								</div>
+							</div>
+
+							<div class="box-hoo-cu">
+								<h3>Sales Department</h3>
+								<h4>Hours of Operation</h4>
+								<div class="row">
+									<div class="col-xs-5">Monday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Tuesday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Wednesday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Thursday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Friday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Saturday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Sunday</div>
+									<div class="col-xs-7">CLOSED</div>
+								</div>
+
+								<h4>Direct Phone Contact</h4>
+								<div class="row">
+									<div class="col-xs-5">Direct Dial</div>
+									<div class="col-xs-7">(803) 799-6327</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Toll Free</div>
+									<div class="col-xs-7">(800) 944-8570</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Fax</div>
+									<div class="col-xs-7">(803) 771-7863</div>
+								</div>
+							</div>
+
+							<div class="box-hoo-cu">
+								<h3>Parts Department</h3>
+								<h4>Hours of Operation</h4>
+								<div class="row">
+									<div class="col-xs-5">Monday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Tuesday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Wednesday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Thursday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Friday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Saturday</div>
+									<div class="col-xs-7">9:00am to 8:00pm</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Sunday</div>
+									<div class="col-xs-7">CLOSED</div>
+								</div>
+
+								<h4>Direct Phone Contact</h4>
+								<div class="row">
+									<div class="col-xs-5">Direct Dial</div>
+									<div class="col-xs-7">(803) 252-0040</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Toll Free</div>
+									<div class="col-xs-7">(866) 293-7439</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5">Fax</div>
+									<div class="col-xs-7"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
