--- a/columbianissan/index.html
+++ b/columbianissan/index.html
@@ -45,14 +45,14 @@
 				<img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1505762003069706&ev=PageView&noscript=1"/>
 			</noscript>
 	</head>
-	<body id="">
-		
+	<body id="columbianissan-home">
+
 		<!-- #HEADER-PRIMARY -->
 		<header id="header-primary">
-			<div class="wrapper-content clearfix">
+			<div class="wrapper-header clearfix">
 				
 				<!-- #HEADER-LOGO -->
-				<div id="header-logo" class="clearfix">
+				<div id="header-logo" class="col-md-9">
 					<div id="header-logo-image">
 						<a href="index.html">
 							<img src="assets/img/header/logo_franchise2.png" alt="Dick Smith Columbia Nissan"/>
@@ -67,40 +67,21 @@
 				</div> <!-- /#HEADER-LOGO -->
 
 				<!-- #HEADER-ADDRESS -->
-				<div id="header-address">
+				<div id="header-address" class="col-md-3">
 					<a href="tel:(800)944-8570" class="link-phone">(800) 944-8570</a>
 					<a href="tel:(803)256-6600" class="link-phone">(803) 256-6600</a>
 					<a href="https://www.google.com/maps/place/Dick+Smith+Nissan+of+Columbia/@34.1106508,-80.8973842,17z">9940 Two Notch Road, Columbia, SC 29223</a>
-					<a href="#">Click here for driving directions</a>
+					<a href="contact-us.html">Click here for driving directions</a>
 				</div> <!-- /#HEADER-ADDRESS -->
 
-				<!-- #HEADER-NAV -->
-				<!-- NEED TO CREATE HOVERABLE DROP-DOWN MENU -->
-				<div id="header-nav">
-					<i class="fa fa-bars" aria-hidden="true" class="hide-desktop"></i>
-
-					<nav>
-						<ul>
-							<li><a href="#">Home</a></li>
-							<li><a href="#">Vehicle Search</a></li>
-							<li><a href="#">Vehicle Exchange</a></li>
-							<li><a href="#">Rent-a-Vehicle</a></li>
-							<li><a href="#">Service</a></li>
-							<li><a href="#">Parts</a></li>
-							<li><a href="#">Contact Us</a></li>
-							<li><a href="#">Online Credit</a></li>
-						</ul>
-					</nav>
-				</div> <!-- /#HEADER-NAV -->
-
-			</div> <!-- /.WRAPPER-CONTENT -->
+			</div> <!-- /.WRAPPER-HEADER -->
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-home">
+		<article id="content-primary-home" class="wrapper-content">
 			
 			<!-- #BANNER-HOME -->
-			<section id="banner-home">
+			<section id="banner-home" class="wrapper-section">
 				<div id="banner-home-1">
 					<a href="new-cars-trucks.html">
 						<img src="assets/img/banners/1.jpg" alt=""/>
@@ -145,21 +126,19 @@
 			</section> <!-- /#BANNER-HOME -->
 
 			<!-- #HOME-SECONDARY-NAV -->
-			<section id="home-secondary-nav" class="wrapper-content">
-				<nav>
-					<ul class="clearfix">
-						<li><a href="new-cars-trucks.html">Brand New Vehicles</a></li>
-						<li><a href="used-cars-trucks.html">Pre-Owned Vehicles</a></li>
-						<li><a href="vin-stock-search.html">Stock Number</a></li>
-						<li><a href="buy-my-used-car.html">Vehicle Page</a></li>
-						<li><a href="manager-specials.html">Manager's Specials</a></li>
-						<li><a href="commercial-vehicles.html">Commercial Vehicle</a></li>
-					</ul>
-				</nav>
+			<section id="home-secondary-nav" class="wrapper-section">
+				<ul class="clearfix">
+					<li><a href="new-cars-trucks.html">Brand New Vehicles</a></li>
+					<li><a href="used-cars-trucks.html">Pre-Owned Vehicles</a></li>
+					<li><a href="vin-stock-search.html">Stock Number</a></li>
+					<li><a href="buy-my-used-car.html">Vehicle Exchange</a></li>
+					<li><a href="manager-specials.html">Manager's Specials</a></li>
+					<li><a href="commercial-vehicles.html">Commercial Vehicle</a></li>
+				</ul>
 			</section> <!-- /#HOME-SECONDARY-NAV-->
 
 			<!-- #HOME-PROMOTIONS -->
-			<section id="home-promotions">
+			<section id="home-promotions" class="wrapper-section">
 				<a href="http://www.choosenissan.com/south/dealer-incentives.html" target="_blank">
 					<img src="assets/img/banners/zeroinonnissan.jpg" alt="Zero in on Big Savings Nissan"/>
 				</a>
@@ -168,14 +147,14 @@
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
-			<div class="wrapper-content clearfix">
+			<div class="wrapper-footer">
 				
 				<!-- #FOOTER-NAV-LINKS -->
 				<div id="footer-nav-links">
 					<nav>
 						<ul>
 							<li><a href="sitemap.html">Sitemap</a></li>
-							<li><a href="#">All Inventory</a></li>
+							<li><a href="all-inventory.html">All Inventory</a></li>
 							<li><a href="http://www.dicksmith.com/privacystatement.cfm">Privacy Policy</a></li>
 							<li><a href="contact-us.html">Contact Us</a></li>
 							<li><a href="http://www.dicksmith.com/careers">Jobs</a></li>
