--- a/columbianissan/car-truck-parts.html
+++ b/columbianissan/car-truck-parts.html
@@ -97,7 +97,94 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-ctp" class="content-primary">
+			
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="row">
+						<div class="col-xs-12">
+							<h1 class="text-center">Dick Smith Nissan of Columbia Parts Department</h1>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-8">
+							<div class="minheight-ctp">
+								<div class="row">
+									<div class="col-md-6">
+										<h3>WE CARE ABOUT YOUR EXPERIENCE</h3>
+										<p>Specializing in parts and accessories for all makes and models with a multi-million dollar on-site inventory. Dick Smith offers convenient deliveries throughout South Carolina, Georgia and North Carolina. We have many delivery trucks to ensure you that you will receive your delivery by the next business day. We will meet or beat any advertised price---guaranteed!</p>
+									</div>
+									<div class="col-md-6 text-center"><img src="assets/img/department/parts/parts.jpeg" alt="" /></div>
+								</div>
+							</div>
+							<div class="logo-wrappers logo-wrappers-l">
+								<div class="svc-pd-logo"><img src="assets/img/department/parts/BAWP.png" alt="" /></div>
+								<div class="svc-pd-logo"><img src="assets/img/department/parts/NAPAparts.png" alt="" /></div>
+								<div class="svc-pd-logo"><img src="assets/img/department/parts/mopar.png" alt="" /></div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="minheight-ctp">
+								<h3>Parts Department</h3>
+
+								<h4>Hours of Operation</h4>
+								<div class="box-hoo">
+									<div class="row">
+										<div class="col-xs-5">Monday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Tuesday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Wednesday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Thursday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Friday</div>
+										<div class="col-xs-7">7:00am to 7:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Saturday</div>
+										<div class="col-xs-7">7:00am to 5:00pm</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Sunday</div>
+										<div class="col-xs-7">CLOSED</div>
+									</div>
+								</div>
+
+								<h4>Direct Phone Contact</h4>
+								<div class="box-hoo">
+									<div class="row">
+										<div class="col-xs-5">Direct Dial</div>
+										<div class="col-xs-7">(803) 252-0040</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Toll Free</div>
+										<div class="col-xs-7">(866) 293-7439</div>
+									</div>
+									<div class="row">
+										<div class="col-xs-5">Fax</div>
+										<div class="col-xs-7"></div>
+									</div>
+								</div>
+							</div>
+							<div class="logo-wrappers logo-wrappers-r text-center">
+								<div class="svc-pd-logo"><a href="#"><img src="assets/img/department/parts/requestinfo.png" alt="" /></a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
