--- a/columbianissan/new-cars-trucks.html
+++ b/columbianissan/new-cars-trucks.html
@@ -97,7 +97,202 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-newcarstrucks" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="header form-header">&nbsp;</div>
+					<div class="cv-title">
+						<h1>2015 &amp; 2016 New Nissan Cars, Trucks, and Vans</h1>
+					</div>
+					<div class="vehicle-wrapper">
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/altima_coupe.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>ALTIMA COUPE</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/altima_hybrid.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>ALTIMA HYBRID</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/altima_sedan.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>ALTIMA SEDAN</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/armada.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>ARMADA</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/cube.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>CUBE</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/frontier.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>FRONTIER</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/gt-r.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>GT-R</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/juke.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>JUKE</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/leaf.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>LEAF</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/maxima.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>MAXIMA</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/murano.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>MURANO</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/murano_crosscab.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>MURANO CROSSCAB</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/pathfinder.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>PATHFINDER</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/quest.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>QUEST</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/rogue.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>ROGUE</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/sentra.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>SENTRA</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/titan.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>TITAN</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2016/nissan/titan_xd.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>TITAN XD</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/versa_hatchback.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>VERSA NOTE</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/versa_sedan.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>VERSA SEDAN</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/xterra.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>XTERRA</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/z_coupe.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>Z COUPE</h2>
+							</div>
+						</div>
+						<div class="box">
+							<div class="cv-img">
+								<a href="#"><img src="assets/img/new/2011/z_roadster.jpg"></a>
+							</div>
+							<div class="cv-caption">
+								<h2>Z ROADSTER</h2>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
