--- a/columbianissan/car-price-quote.html
+++ b/columbianissan/car-price-quote.html
@@ -97,7 +97,189 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-cpq" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="header form-header">
+						<h1>Get A Quote On A New or Used Car, Truck, Or Van!</h1>
+						<h3>Fill out the form below to receive a quote, <br />then we'll contact you shortly.</h3>
+					</div>
+
+					<div class="epd-form form">
+						<form>
+							<div class="block">
+								<div class="row">
+									<div class="col-md-4">
+										<h3>Contact Information</h3>
+										<div class="box">
+											<label>first name <span>*</span></label>
+											<input type="" name="" placeholder="john" />
+										</div>
+										<div class="box">
+											<label>middle name <span>*</span></label>
+											<input type="" name="" placeholder="james" />
+										</div>
+										<div class="box">
+											<label>last name <span>*</span></label>
+											<input type="" name="" placeholder="doe" />
+										</div>
+										<div class="box">
+											<label>email <span>*</span></label>
+											<input type="" name="" placeholder="johndoe@email.com" pattern="[a-zA-Z0-9 @.]+" />
+										</div>
+										<div class="box">
+											<label>phone</label>
+											<input type="" name="" placeholder="(___) ___-_____" pattern="[0-9,()-]" />
+										</div>
+									</div>
+									<div class="col-md-4">
+										<h3>Location Information</h3>
+										<div class="box">
+											<label>address</label>
+											<input type="" name="" placeholder="address" />
+										</div>
+										<div class="box">
+											<label>address 2</label>
+											<input type="" name="" placeholder="second address" />
+										</div>
+										<div class="box">
+											<label>city</label>
+											<input type="" name="" placeholder="city" />
+										</div>
+										<div class="box">
+											<label>state</label>
+											<select>
+												<option value="state">select a state</option>
+												<option value="AL">Alabama</option>
+												<option value="AK">Alaska</option>
+												<option value="AZ">Arizona</option>
+												<option value="AR">Arkansas</option>
+												<option value="CA">California</option>
+												<option value="CO">Colorado</option>
+												<option value="CT">Connecticut</option>
+												<option value="DE">Delaware</option>
+												<option value="DC">District Of Columbia</option>
+												<option value="FL">Florida</option>
+												<option value="GA">Georgia</option>
+												<option value="HI">Hawaii</option>
+												<option value="ID">Idaho</option>
+												<option value="IL">Illinois</option>
+												<option value="IN">Indiana</option>
+												<option value="IA">Iowa</option>
+												<option value="KS">Kansas</option>
+												<option value="KY">Kentucky</option>
+												<option value="LA">Louisiana</option>
+												<option value="ME">Maine</option>
+												<option value="MD">Maryland</option>
+												<option value="MA">Massachusetts</option>
+												<option value="MI">Michigan</option>
+												<option value="MN">Minnesota</option>
+												<option value="MS">Mississippi</option>
+												<option value="MO">Missouri</option>
+												<option value="MT">Montana</option>
+												<option value="NE">Nebraska</option>
+												<option value="NV">Nevada</option>
+												<option value="NH">New Hampshire</option>
+												<option value="NJ">New Jersey</option>
+												<option value="NM">New Mexico</option>
+												<option value="NY">New York</option>
+												<option value="NC">North Carolina</option>
+												<option value="ND">North Dakota</option>
+												<option value="OH">Ohio</option>
+												<option value="OK">Oklahoma</option>
+												<option value="OR">Oregon</option>
+												<option value="PA">Pennsylvania</option>
+												<option value="RI">Rhode Island</option>
+												<option value="SC">South Carolina</option>
+												<option value="SD">South Dakota</option>
+												<option value="TN">Tennessee</option>
+												<option value="TX">Texas</option>
+												<option value="UT">Utah</option>
+												<option value="VT">Vermont</option>
+												<option value="VA">Virginia</option>
+												<option value="WA">Washington</option>
+												<option value="WV">West Virginia</option>
+												<option value="WI">Wisconsin</option>
+												<option value="WY">Wyoming</option>
+											</select>
+										</div>
+										<div class="box">
+											<label>zip code</label>
+											<input type="" name="" placeholder="zip" />
+										</div>
+									</div>
+									<div class="col-md-4">
+										<div class="info-wrapper" id="address-bubble">
+											<div class="info-hover"><span>i</span></div>
+											<div class="info-box"><div class="left-arrow"></div>
+											<p>You only need to fill out the address field if you select the postal option under the Contact Preferences section.</p>
+											</div>
+							            </div>
+										<p>If you'd like to receive postage instead of e-mail or phone as a form of contact, please fill in the adjacent column.</p>
+									</div>
+								</div>
+							</div>
+
+							<div class="block">
+								<h3>Contact Preferences</h3>
+								<div class="box">
+									<label>preferred method to contact you</label>
+									<select>
+										<option value="Sales">Any Way</option>
+										<option value="Phone">Phone</option>
+										<option value="Email">Email</option>
+										<option value="Postal">Postal</option>
+									</select>
+								</div>
+								<div class="box">
+									<label>preferred time you contact you</label>
+									<select>
+										<option value="Any Time">Any Time</option>
+										<option value="Early Morning">Early Morning [7am - 9am]</option>
+										<option value="Morning">Morning [9am - 12pm]</option>
+										<option value="Afternoon">Afternoon [12pm - 6pm]</option>
+										<option value="Evening">Evening [6pm - 8pm]</option>
+										<option value="Night">Night [8pm - 10pm]</option>
+									</select>
+								</div>
+							</div>
+
+							<div class="block">
+								<h3>Vehicle Information</h3>
+								<div class="box">
+									<div class="owned-group">
+										<label for="preowned">new</label>
+										<input type="radio" tabindex="14/" value="New" name="preowned" id="preowned">
+										<label for="preowned">preowned</label>
+										<input type="radio" tabindex="15/" value="Preowned" checked="" name="preowned" id="preowned">
+									</div>
+								</div>
+								<div class="box">
+									<div class="box-side">
+										<label>make <span>*</span></label>
+										<input type="" name="" placeholder="make" />
+									</div>
+									<div class="box-side">
+										<label>model <span>*</span></label>
+										<input type="" name="" placeholder="model" />
+									</div>
+								</div>
+							</div>
+
+							<div class="block">
+								<div class="captcha-holder">
+									<img src="assets/img/captcha.png" alt="" />
+								</div>
+								<div class="action">
+									<input type="submit" name="" value="submit" class="btn-submit" />
+									<small>or press enter</small>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
