--- a/columbianissan/vin-stock-search.html
+++ b/columbianissan/vin-stock-search.html
@@ -97,7 +97,45 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-vss" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<h1>Search for a vehicle by the stock number or by the VIN number</h1>
+					<div class="row">
+						<div class="col-md-6">
+							<h2>Enter Stock Number</h2>
+							<div class="img-holder">
+								<img src="assets/img/stock/stock-tag.png">
+							</div>
+							<div class="img-caption">
+								<h3>Example Stock Number from one of our vehicles.</h3>
+							</div>
+							<div class="form">
+								<form>
+									<input type="text" name="" />
+									<input type="submit" name="" value="SEARCH" class="btn-submit" />
+								</form>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<h2>Enter Stock Number</h2>
+							<div class="img-holder">
+								<img src="assets/img/stock/vin-tag.png">
+							</div>
+							<div class="img-caption">
+								<h3>Example VIN Number from one of our vehicles.</h3>
+							</div>
+							<div class="form">
+								<form>
+									<input type="text" name="" />
+									<input type="submit" name="" value="SEARCH" class="btn-submit" />
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
